sfdx/force-app/main/default/objects/Sync_Record__c/Sync_Record__c.object-meta.xml
<CustomObject>
    <description>This object tracks sync reports for the Stripe Salesforce Connector.</description>
    <label>Sync Record</label>
    <nameField>
        <displayFormat>SR-{000000}</displayFormat>
        <label>Sync Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sync Management</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>