sfdx/force-app/main/default/objects/Sync_Record__c/fields/Primary_Object_Type__c.field-meta.xml
<CustomField>
    <fullName>Primary_Object_Type__c</fullName>
    <description>Stores the primary object type</description>
    <inlineHelpText>This field contains the type of the Primary Record related to this Sync Record.</inlineHelpText>
    <label>Primary Object Type</label>
    <type>TextArea</type>
</CustomField>