sfdx/force-app/main/default/objects/Sync_Record__c/fields/Primary_Record__c.field-meta.xml
<CustomField>
    <fullName>Primary_Record__c</fullName>
    <description>A link to the Primary Record for this Sync Record.</description>
    <formula>HYPERLINK(Primary_Record_ID__c, Primary_Record_ID__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Provides a link to the Primary Record related to this Sync Record.</inlineHelpText>
    <label>Primary Record</label>
    <type>Text</type>
</CustomField>