sfdx/force-app/main/default/objects/Sync_Record__c/fields/Primary_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Primary_Record_ID__c</fullName>
    <description>Stores the Primary Record Id</description>
    <inlineHelpText>The Record Id of the Primary Record for this Sync Record.</inlineHelpText>
    <label>Primary Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>