sfdx/force-app/main/default/objects/Sync_Record__c/fields/Resolution_Documentation_Link__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Documentation_Link__c</fullName>
    <label>Stripe Documentation Link</label>
    <description>Link to documentation for the Stripe Billing connector for Salesforce CPQ.</description>
    <inlineHelpText>Link to Error Handling documentation.</inlineHelpText>
    <type>Url</type>
</CustomField>