sfdx/force-app/main/default/objects/Sync_Record__c/fields/Resolution_Message__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Message__c</fullName>
    <label>Sync Message</label>
    <description>The error message produced from the sync request.</description>
    <inlineHelpText>This field contains the message produced from the sync request.</inlineHelpText>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>