sfdx/force-app/main/default/objects/Sync_Record__c/fields/Secondary_Object_Type__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Object_Type__c</fullName>
    <description>Stores the secondary object type</description>
    <inlineHelpText>This field contains the type of the Secondary Record related to this Sync Record.</inlineHelpText>
    <label>Secondary Object Type</label>
    <type>TextArea</type>
</CustomField>