sfdx/force-app/main/default/objects/Sync_Record__c/fields/Secondary_Record__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Record__c</fullName>
    <formula>HYPERLINK(Secondary_Record_ID__c, Secondary_Record_ID__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Secondary Record</label>
    <type>Text</type>
</CustomField>