sfdx/force-app/main/default/objects/Sync_Record__c/fields/Secondary_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Record_ID__c</fullName>
    <description>Stores the Secondary Record Id</description>
    <inlineHelpText>The Record Id of the Secondary Record for this Sync Record.</inlineHelpText>
    <label>Secondary Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>