sfdx/force-app/main/default/objects/Sync_Record__c/fields/Stripe_Request_Dashboard_Link__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Request_Dashboard_Link__c</fullName>
    <label>Stripe Request Dashboard Link</label>
    <description>The Stripe request that was issued by the connector.</description>
    <inlineHelpText>The Stripe request that was issued by the connector. If empty, no Stripe request was issued.</inlineHelpText>
    <type>Url</type>
</CustomField>