sfdx/force-app/main/default/objects/Sync_Record__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Resolution_Status__c</columns>
    <columns>Primary_Object_Type__c</columns> 
    <columns>Primary_Record__c</columns>
    <columns>Secondary_Object_Type__c</columns>
    <columns>Secondary_Record__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Sync Records</label>
</ListView>