sfdx/force-app/main/default/objects/Sync_Record__c/listViews/OrderItem_Sync_Records.listView-meta.xml
<ListView>
    <fullName>OrderItem_Sync_Records</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Resolution_Status__c</columns>
    <columns>Primary_Object_Type__c</columns>
    <columns>Primary_Record__c</columns>
    <columns>Secondary_Object_Type__c</columns> 
    <columns>Secondary_Record__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Primary_Object_Type__c</field>
        <operation>equals</operation>
        <value>OrderItem</value>
    </filters>
    <filters>
        <field>Secondary_Object_Type__c</field>
        <operation>equals</operation>
        <value>OrderItem</value>
    </filters>
    <label>OrderItem Sync Records</label>
</ListView>