sfdx/force-app/main/default/objects/Sync_Record__c/listViews/Successful_Sync_Records.listView-meta.xml
<ListView>
    <fullName>Successful_Sync_Records</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Resolution_Status__c</columns>
    <columns>Primary_Object_Type__c</columns>
    <columns>Primary_Record__c</columns>
    <columns>Secondary_Object_Type__c</columns>
    <columns>Secondary_Record__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Resolution_Status__c</field>
        <operation>equals</operation>
        <value>Resolved,Success</value>
    </filters>
    <label>Successful Sync Records</label>
</ListView>